--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -1,3 +1,4 @@
+/* cabeçalho */
 .menu {
     display: flex;
     justify-content: space-evenly;
@@ -6,9 +7,34 @@
     column-gap: 33px;
 }
 
+/* categorias */
+.categorias__lista {
+    display: flex;
+    flex-direction: column;
+    row-gap: .5rem;
+}
+
+.destaques {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+}
+
+/* .destaques__barra {
+    flex-grow: 1;
+    white-space: nowrap;
+} */
+
 @media (min-width: 720px) {
+    /* cabeçalho */
     .menu {
         column-gap: 75px;
+    }
+    /* categorias */
+    .categorias__lista {
+        flex-wrap: wrap;
+        column-gap: 1.5rem;
+        row-gap: 1rem;
     }
 
 }
