--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -1,4 +1,5 @@
-/* cabeçalho */
+/* Cabeçalho */
+
 .menu {
     display: flex;
     justify-content: space-evenly;
@@ -7,12 +8,15 @@
     column-gap: 33px;
 }
 
-/* categorias */
+/* Categorias */
+
 .categorias__lista {
     display: flex;
     flex-direction: column;
     row-gap: .5rem;
 }
+
+/* Destaques */
 
 .destaques {
     display: flex;
@@ -20,26 +24,74 @@
     column-gap: 10px;
 }
 
-/* .destaques__barra {
+.destaques__barra {
     flex-grow: 1;
-    white-space: nowrap;
-} */
+}
+
+/* Eventos */
+
+.eventos__lista {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1.5rem;
+    row-gap: 1rem;
+    justify-content: center;
+}
+
+.eventos__item {
+    flex-grow: 1;
+    max-width: 400px;
+}
+
+/*Agenda ATIVIDADE PARA SABER MAIS */
+
+.agenda__lista {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 1rem;
+    column-gap: 1.5rem;
+    justify-content: center;
+}
+
+.agenda__item {
+    flex-grow: 1;
+}
 
 @media (min-width: 720px) {
-    /* cabeçalho */
+
+    /* Cabeçalho */
+
     .menu {
         column-gap: 75px;
     }
-    /* categorias */
+
+    /* Categorias */
+
     .categorias__lista {
         flex-wrap: wrap;
         column-gap: 1.5rem;
         row-gap: 1rem;
     }
 
+    /* Eventos */
+
+    .eventos__lista {
+        justify-content: end;
+    }
+
+    /*Agenda ATIVIDADE PARA SABER MAIS */
+
+    .agenda__lista {
+        justify-content: end;
+
+    }
+
 }
 
 @media (min-width: 1440px) {
+
+    /* Cabeçalho */
+
     .menu {
         column-gap: 105px;
         flex-wrap: nowrap;
@@ -60,7 +112,9 @@
     .menu__item:nth-child(4) {
         order: 5;
     }
+
     .menu__item:nth-child(5) {
         order: 2;
     }
+
 }
