--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -57,6 +57,17 @@
     flex-grow: 1;
 }
 
+/* Rodapé */
+.rodape{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.rodape__logo {
+    align-self: end;
+}
+
 @media (min-width: 720px) {
 
     /* Cabeçalho */
